force-app/main/default/objects/Activity/fields/Agent_duration__c.field-meta.xml
<CustomField>
    <fullName>Agent_duration__c</fullName>
    <label>Agent duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>