force-app/main/default/objects/Activity/fields/Agent_id__c.field-meta.xml
<CustomField>
    <fullName>Agent_id__c</fullName>
    <description>Agent identification</description>
    <inlineHelpText>Agent identification</inlineHelpText>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>