force-app/main/default/objects/Activity/fields/AssocieCinema__c.field-meta.xml
<CustomField>
    <fullName>AssocieCinema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un cinéma</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Activités</relationshipLabel>
    <relationshipName>Activit_s</relationshipName>
    <type>Lookup</type>
</CustomField>