force-app/main/default/objects/Activity/fields/AssocieClient__c.field-meta.xml
<CustomField>
    <fullName>AssocieClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activités</relationshipLabel>
    <relationshipName>Activit_s</relationshipName>
    <type>Lookup</type>
</CustomField>