force-app/main/default/objects/Activity/fields/AssocieEvement__c.field-meta.xml
<CustomField>
    <fullName>AssocieEvement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un événement</label>
    <referenceTo>Evenement__c</referenceTo>
    <relationshipLabel>Activités</relationshipLabel>
    <relationshipName>Activites</relationshipName>
    <type>Lookup</type>
</CustomField>