force-app/main/default/objects/Activity/fields/AssocieFilm__c.field-meta.xml
<CustomField>
    <fullName>AssocieFilm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un film</label>
    <referenceTo>Film__c</referenceTo>
    <relationshipLabel>Activités</relationshipLabel>
    <relationshipName>Activites</relationshipName>
    <type>Lookup</type>
</CustomField>