force-app/main/default/objects/Activity/fields/AssocieProduit__c.field-meta.xml
<CustomField>
    <fullName>AssocieProduit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé à un produit</label>
    <referenceTo>Produit__c</referenceTo>
    <relationshipLabel>Activités</relationshipLabel>
    <relationshipName>Activit_s</relationshipName>
    <type>Lookup</type>
</CustomField>