force-app/main/default/objects/Activity/fields/Call_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Call External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>