force-app/main/default/objects/Activity/fields/call_id__c.field-meta.xml
<CustomField>
    <fullName>call_id__c</fullName>
    <description>Field is deprecated</description>
    <inlineHelpText>Field is deprecated</inlineHelpText>
    <label>callid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>