force-app/main/default/objects/Activity/fields/call_result_status__c.field-meta.xml
<CustomField>
    <fullName>call_result_status__c</fullName>
    <label>call result status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>