force-app/main/default/objects/Activity/fields/Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_Time__c</fullName>
    <description>Last update client status</description>
    <label>Change Time</label>
    <type>DateTime</type>
</CustomField>