force-app/main/default/objects/Activity/fields/DateDeLAppelSortant__c.field-meta.xml
<CustomField>
    <fullName>DateDeLAppelSortant__c</fullName>
    <defaultValue>Today ()</defaultValue>
    <description>Champ apparaissant dans consigner un appel.</description>
    <label>Date de l&#39;appel sortant</label>
    <type>Date</type>
</CustomField>