force-app/main/default/objects/Activity/fields/Group_id__c.field-meta.xml
<CustomField>
    <fullName>Group_id__c</fullName>
    <label>Group id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>