force-app/main/default/objects/Activity/fields/Group_Id_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Group_Id_Outbound__c</fullName>
    <label>Group Id Outbound</label>
    <length>255</length>
    <type>Text</type>
</CustomField>