force-app/main/default/objects/Activity/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appel entrant</fullName>
            </value>
            <value>
                <fullName>Appel sortant</fullName>
            </value>
            <value>
                <fullName>Courrier entrant</fullName>
            </value>
            <value>
                <fullName>Courrier sortant</fullName>
            </value>
            <value>
                <fullName>Email entrant</fullName>
            </value>
            <value>
                <fullName>Email sortant</fullName>
            </value>
            <value>
                <fullName>Formulaire de contact</fullName>
            </value>
            <value>
                <fullName>Salle</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Critizr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>