force-app/main/default/objects/Activity/fields/Outbound_call__c.field-meta.xml
<CustomField>
    <fullName>Outbound_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound call</label>
    <type>Checkbox</type>
</CustomField>