force-app/main/default/objects/Activity/fields/ref__c.field-meta.xml
<CustomField>
    <fullName>ref__c</fullName>
    <description>Reference (Text information set by IVR)</description>
    <inlineHelpText>Reference (Text information set by IVR)</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>