force-app/main/default/objects/Activity/fields/sda__c.field-meta.xml
<CustomField>
    <fullName>sda__c</fullName>
    <description>Client phone number</description>
    <inlineHelpText>Client phone number</inlineHelpText>
    <label>Client Phone</label>
    <type>Phone</type>
</CustomField>