force-app/main/default/objects/Activity/fields/Service_id__c.field-meta.xml
<CustomField>
    <fullName>Service_id__c</fullName>
    <description>Service identification</description>
    <inlineHelpText>Service identification</inlineHelpText>
    <label>Service id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>