force-app/main/default/objects/Activity/fields/Service_Label__c.field-meta.xml
<CustomField>
    <fullName>Service_Label__c</fullName>
    <label>Service Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>