force-app/main/default/objects/Activity/fields/TECH_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_Type__c</fullName>
    <label>TECH_Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>