force-app/main/default/objects/Activity/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description>Url conversation whether exists</description>
    <inlineHelpText>Url conversation whether exists</inlineHelpText>
    <label>Url</label>
    <type>TextArea</type>
</CustomField>